Revert "change toList stream operation as sonarqube itself has a bug not recognising it is fine"
This reverts commit 467188478f7112574d4cb46376210b1692dadca6.